--- a/1.html
+++ b/1.html
@@ -12,6 +12,32 @@
   <li><a href="3.html">한국의 AIRSOFT GUN</a></li>
 </ol>
 <h2>AIRSOFT GUN이란 무엇인가?</h2>
+<p>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/Mzuw4SE7Ibw" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</p>
 <p><a href="https://en.wikipedia.org/wiki/Airsoft_gun" target="_blank" title="Airsoft gun - Wikipedia">에어소프트건은</a> 만 20세 이상에겐 <strong><u>승인이나 허가없이</u> 국내에서 자유롭게</strong> 구매할 수 있는 성인용 장난감이다. 안전장구를 착용하고 규정만 잘 지키면 위험하지 않은 총기이다.<br><img src="airsoft.jpg"width="300"></br></p> <p style="margin-top:45px">공기총과 원리는 비슷하지만 공기의 압력이 훨씬 낮으며 발사하는 탄의 재질이 다르다. 금속제 탄자를 발사하며 사냥에 사용할 수 있는 살상 무기인 공기총과 달리, 안전 장구를 착용하면 부상의 염려 없이 모의 전투나 사격을 즐길 수 있는 장비이다. 이 장비를 사용한 스포츠를 에어소프트 게임이라 부른다.</p>
+<p>
+  <div id="disqus_thread"></div>
+<script>
+
+/**
+*  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+*  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
+/*
+var disqus_config = function () {
+this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+};
+*/
+(function() { // DON'T EDIT BELOW THIS LINE
+var d = document, s = d.createElement('script');
+s.src = 'https://airsoft-gun.disqus.com/embed.js';
+s.setAttribute('data-timestamp', +new Date());
+(d.head || d.body).appendChild(s);
+})();
+</script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+
+</P>
 </body>
-<html>
+</html>
