--- a/1.html
+++ b/1.html
@@ -2,7 +2,16 @@
 <html>
 <head>
 <title>WEB1 - ARISOFT GUN이란 무엇인가?</title>
-<meta charset="utf-8"
+<meta charset="utf-8">
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-X9DS4HVEC8"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-X9DS4HVEC8');
+</script>
 </head>
 <body>
   <h1><a href="AIRSOFT GUN.html">AIRSOFT GUN</a></h1>
@@ -13,7 +22,7 @@
 </ol>
 <h2>AIRSOFT GUN이란 무엇인가?</h2>
 <p>
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/Mzuw4SE7Ibw" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  <iframe width="510" height="315" src="https://www.youtube.com/embed/Mzuw4SE7Ibw" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </p>
 <p><a href="https://en.wikipedia.org/wiki/Airsoft_gun" target="_blank" title="Airsoft gun - Wikipedia">에어소프트건은</a> 만 20세 이상에겐 <strong><u>승인이나 허가없이</u> 국내에서 자유롭게</strong> 구매할 수 있는 성인용 장난감이다. 안전장구를 착용하고 규정만 잘 지키면 위험하지 않은 총기이다.<br><img src="airsoft.jpg"width="300"></br></p> <p style="margin-top:45px">공기총과 원리는 비슷하지만 공기의 압력이 훨씬 낮으며 발사하는 탄의 재질이 다르다. 금속제 탄자를 발사하며 사냥에 사용할 수 있는 살상 무기인 공기총과 달리, 안전 장구를 착용하면 부상의 염려 없이 모의 전투나 사격을 즐길 수 있는 장비이다. 이 장비를 사용한 스포츠를 에어소프트 게임이라 부른다.</p>
 <p>
@@ -37,7 +46,21 @@ s.setAttribute('data-timestamp', +new Date());
 })();
 </script>
 <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-
 </P>
+<p>
+  <!--Start of Tawk.to Script-->
+<script type="text/javascript">
+var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+(function(){
+var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+s1.async=true;
+s1.src='https://embed.tawk.to/5fb37ab23e20f61525e41e41/default';
+s1.charset='UTF-8';
+s1.setAttribute('crossorigin','*');
+s0.parentNode.insertBefore(s1,s0);
+})();
+</script>
+<!--End of Tawk.to Script-->
+</p>
 </body>
 </html>
