--- a/3.html
+++ b/3.html
@@ -13,5 +13,28 @@
 </ol>
 <h2>한국의 AIRSOFT GUN</h2>
 <p>국내 법규상 만 14세 미만의 아동은 사용 금지. 그 이상이라 해도 일정 이상의 탄속을 지니면 만 20세 미만은 판매 금지가 된다. 에어소프트건 규제는 대만이 20J, 홍콩이 2J, 일본이 1J, 독일이 0.5J[16], 한국은 겨우 0.2J이다. (만 14세 이상: 0.14j, 만 20세 이상: 0.2j)2000년대 중반 즈음 중국에서 도쿄마루이의 제품들을 카피한 카피품이 대량으로 들어와서 한때 불법 무기 수입으로 수사를 한 적도 있으며, 그 기사가 헤드라인을 장식한 적도 있다. 관련자 입장에서는 어이가 안드로메다로 갈 일이었지만. 가끔 실총의 부품을 사용하여 개조하면 사거리가 1km인 살상 병기로 개조할 수 있다고 믿는 사람[17]이 있는데, 총기에 대한 지식이 전무한 수준을 넘어서 말 그대로 군대 근처에도 안 가 본 사실을 인증하는 것일 뿐이다. 현역 병장 만기전역자가 아니라도 보충역 4주 훈련만 받았어도 사격장 멀가중이 250m 100m 200m라는 정도는 다 안다.애초에 에어소프트건은 실총과 전체적인 크기부터 의도적으로 다르게 만드는 데다 내부 구조는 실총과 완전히 다르다.만약 에어소프트건을 개조해서 실총으로 만들 수 있다면, 또 만들 실력이 된다면 차라리 쇠 깎아서 처음부터 실총으로 제작하는 게 훨씬 안전할 것이다. 물론 사제인만큼 정식 총기(합법적으로 시설에서 생산되는 군용 총기 등)에 비해 폭발 사고가 일어날 위험은 훨씬 크겠지만.. 팥과 콩이 비슷하게 생겼다고 팥으로 메주를 쑬 수는 없는 것과 마찬가지다. 애초에, 돌격 소총의 경우 실총의 유효 사거리도 1km은 안 나온다. 수백미터 단위. 유효사거리가 km단위로 가려면 대구경 대물 저격총은 되어야 한다.방송 뉴스에서는 조준탄이든 눈먼탄이든 상관없이 일반인에 대한 위협을 논지로 삼지 유효사거리는 따지지 않기 때문에, 만약 포물선으로 쏴서 탄자의 최대비행거리 1km가 나오는 놈을 만든 싸이코가 있다면 틀린 뉴스는 아니다. 몇 년 전만 해도 총기는 영치대상이었지만 탄약은 영치대상이 아니었고(지금은 탄약도 개인소지금지되었다고 한다) 심지어 사냥용 탄약을 택배거래로 판매한 사례가 방송에 보도되기도 했기 때문에 불가능한 일은 아니었다. 이 탄약관리문제때문에 공기총 중에 소총탄자가 통과할 수 있는 총열을 가진 모델이 규제되었기도 하다.총기에 조금 관심있는 사람이라면 누구나 알듯이, 한 발 쏘는 데는 총알이 그 발사기(총)보다 먼저다. 최근 몇 년 미국에서 3D프린터로 인쇄한 총기(물론 모든 부품이 플라스틱은 아니다)가 논란인 이유도 이것인데, 무슨 2차대전 레지스탕스용만큼이나 조잡한 일회용 플라스틱총이 나오더라도 총기소지를 규제하는 것보다 총탄유통을 규제하는 것이 훨씬 어렵고 범죄가 발생했을 때 총기를 수사할 실마리가 없기 때문에 문제가 되는 것이다. 다만 이상의 논의는 모두 에어소프트건과 BB탄하고는 기본적으로 무관한 이야기다.</p>
+<p>
+  <div id="disqus_thread"></div>
+<script>
+
+/**
+*  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+*  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
+/*
+var disqus_config = function () {
+this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+};
+*/
+(function() { // DON'T EDIT BELOW THIS LINE
+var d = document, s = d.createElement('script');
+s.src = 'https://airsoft-gun.disqus.com/embed.js';
+s.setAttribute('data-timestamp', +new Date());
+(d.head || d.body).appendChild(s);
+})();
+</script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+
+</p>
 </body>
-<html>
+</html>
